<resources>
    <string name="app_name">ব্লাড ব্যান্ড</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="err_msg_name">অনুগ্রহ করে আপনার নাম লিখুন</string>
    <string name="err_msg_email">অনুগ্রহ করে আপনার ই-মেইল সঠিকভাবে লিখুন</string>
    <string name="err_msg_add">অনুগ্রহ করে আপনার ঠিকানা লিখুন</string>
    <string name="err_msg_num">অনুগ্রহ করে আপনার ফোন নাম্বার লিখুন</string>
    <string name="err_msg_grp">অনুগ্রহ করে আপনার রক্তের গ্রুপ লিখুন</string>
    <string name="user">&#xf007;</string>
    <string name="email">&#xf0e0;</string>
    <string name="phone">&#xf095;</string>
    <string name="location">&#xf041;</string>
    <string name="date">&#xf073;</string>
    <string name="star">&#xf005;</string>
    <string name="drop">&#xf043;</string>
    <string name="mail">&#xf0e0;</string>
    <string name="sms">&#xf27a;</string>
    <string name="edit">&#xf044;</string>
    <string name="age">&#xf251;</string>
    <string name="del">&#xf1f8;</string>
    <string name="gender">&#xf224;</string>
    <string name="out">&#xf061;</string>
    <string name="settings">&#xf013;</string>
    <string name="info">&#xf05a;</string>
    <string name="gallery">&#xf03e;</string>
    <string name="pass">&#xf13e;</string>
    <string name="right">&#xf061;</string>
    <string name="wrong">&#xf00d;</string>
    <string name="ok">&#xf00c;</string>
    <string name="pending">&#xf06a;</string>
    <string name="stetho">&#xf0f1;</string>
    <string name="in">&#xf13e;</string>
    <string name="chat">&#xf075;</string>
    <string name="award">&#xf091;</string>
    <string name="error">&#xf071;</string>
    <string name="plus">&#xf067;</string>
    <string name="loc">&#xf3c5;</string>
    <string name="diamond">&#xf3a5;</string>
    <string name="medal">&#xf005;</string>
    <string name="medal1">&#xf559;</string>
</resources>
