<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:padding="10dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:text="রক্তদানের তালিকা"
        android:textAlignment="center"
        android:textColor="#e83d3d"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="নাম"
        android:layout_below="@+id/title"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textColor="#4b4b4b"
        android:textSize="16.5dp" />

    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_marginTop="10dp"
        android:gravity="center|start"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/log"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:text="@string/date"
            android:textAlignment="center"
            android:textColor="#e83d3d"
            android:textSize="18dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dondate"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:text="রক্তদানের তারিখ"
            android:textAlignment="center"
            android:textColor="#787878"
            android:textSize="14dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/l2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/l1"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/unit"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:text="@string/error"
            android:textAlignment="center"
            android:textColor="#e83d3d"
            android:textSize="18dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/donunit"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:text="পরিমাণ"
            android:textAlignment="center"
            android:textColor="#787878"
            android:textSize="14dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/l3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/l2"
        android:gravity="center|start"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/logout"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:text="@string/location"
            android:textAlignment="center"
            android:textColor="#e83d3d"
            android:textSize="18dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/donplace"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="0dp"
            android:text="জায়গা"
            android:textColor="#787878"
            android:textSize="14dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/l4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/l3"
        android:gravity="center|start"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/age"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:text="@string/age"
            android:textAlignment="center"
            android:textColor="#e83d3d"
            android:textSize="18dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/donage"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="0dp"
            android:text="বয়স"
            android:textColor="#787878"
            android:textSize="14dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/l5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/l4"
        android:gravity="center|start"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/gender"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:text="@string/gender"
            android:textAlignment="center"
            android:textColor="#e83d3d"
            android:textSize="18dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dongender"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="0dp"
            android:text="লিঙ্গ"
            android:textColor="#787878"
            android:textSize="14dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center|end"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/l5">

        <TextView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/edit"
            android:gravity="center"
            android:layout_below="@+id/l3"
            android:text="@string/edit"
            android:textAlignment="center"
            android:textColor="#787878"
            android:textSize="18dp" />

        <TextView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/delete"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/del"
            android:layout_below="@+id/l3"
            android:textAlignment="center"
            android:textColor="#787878"
            android:textSize="18dp" />
    </LinearLayout>
</RelativeLayout>