<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:padding="10dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:text="প্রোফাইল সেটিংস"
        android:textAlignment="center"
        android:textColor="#e83d3d"
        android:textSize="15dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#787878"
        android:layout_below="@+id/title"
        android:layout_marginTop="5dp"/>

    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginTop="10dp"
        android:gravity="center|start"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/log"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:text="@string/drop"
            android:textAlignment="center"
            android:textColor="#e83d3d"
            android:textSize="18dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:text="রক্তদানের তালিকা"
            android:textAlignment="center"
            android:textColor="#787878"
            android:textSize="15dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/l2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/l1"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/edit"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:text="@string/info"
            android:textAlignment="center"
            android:textColor="#e83d3d"
            android:textSize="18dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:text="তথ্য সম্পাদনা"
            android:textAlignment="center"
            android:textColor="#787878"
            android:textSize="15dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/l6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/l2"
        android:layout_marginTop="5dp"
        android:visibility="gone"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/stetho"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:text="@string/stetho"
            android:textAlignment="center"
            android:textColor="#e83d3d"
            android:textSize="18dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:text="স্বাস্থ্যজনিত তথ্য"
            android:textAlignment="center"
            android:textColor="#787878"
            android:textSize="15dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/l4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/l6"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/picedit"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:text="@string/gallery"
            android:textAlignment="center"
            android:textColor="#e83d3d"
            android:textSize="18dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:text="প্রোফাইল ছবি সম্পাদনা"
            android:textAlignment="center"
            android:textColor="#787878"
            android:textSize="15dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/l5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/l4"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/passedit"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:text="@string/pass"
            android:textAlignment="center"
            android:textColor="#e83d3d"
            android:textSize="18dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:text="পাসওয়ার্ড সম্পাদনা"
            android:textAlignment="center"
            android:textColor="#787878"
            android:textSize="15dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/l3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/l5"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/logout"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:text="@string/out"
            android:textAlignment="center"
            android:textColor="#e83d3d"
            android:textSize="18dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:text="লগআউট"
            android:textAlignment="center"
            android:textColor="#787878"
            android:textSize="15dp" />

    </LinearLayout>
</RelativeLayout>