<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/profile_back" />

    <TextView
        android:id="@+id/id"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textColor="@color/abc_primary_text_disable_only_material_dark" />

    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#e83d3d"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center|start"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/date_logo"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:text="@string/date"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtPrice"
            android:layout_marginLeft="5dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="Date"
            android:textColor="#ffffff"
            android:textSize="12dp"
            android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/l2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/l1"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center|start"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/drop"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:text="@string/drop"
            android:textAlignment="center"
            android:textColor="#e83d3d"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/txtPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtPrice"
            android:layout_marginLeft="5dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="Unit"
            android:textColor="#404040"
            android:textSize="15dp"
            android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/l3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/l2"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="0dp"
        android:gravity="center|start"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/place"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:text="@string/location"
            android:textAlignment="center"
            android:textColor="#e83d3d"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/txtAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="Place"
            android:textColor="#686767"
            android:textSize="12dp"
            android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00"
            android:textColor="#494949"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Apr"
            android:textColor="#545454"
            android:textSize="13dp" />

        <TextView
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2018"
            android:textColor="#787878"
            android:textSize="10dp" />

    </LinearLayout>

    <TextView
        android:layout_width="0.5dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="55dp"
        android:background="#878787"
        android:visibility="gone" />

    <TextView
        android:layout_width="0.5dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="55dp"
        android:background="#878787"
        android:visibility="gone" />

</RelativeLayout>