<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/profile_back1" />

    <TextView
        android:id="@+id/id"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textColor="@color/abc_primary_text_disable_only_material_dark" />

    <LinearLayout
        android:id="@+id/rel"
        android:layout_width="45dp"
        android:layout_height="55dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:background="@drawable/blood_req_back"
        android:orientation="vertical"
        android:weightSum="2">

        <TextView
            android:id="@+id/grp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="A+"
            android:textAlignment="center"
            android:textColor="#e83d3d"
            android:textSize="18dp" />

        <RelativeLayout
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1">

            <View
                android:layout_width="match_parent"
                android:layout_height="6px"
                android:background="#e83d3d" />

            <TextView
                android:id="@+id/urgent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/blood_req_back2"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:text="জরুরি"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="10dp" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rel"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/last_donate"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:text="@string/drop"
            android:textAlignment="center"
            android:textColor="#e83d3d"
            android:textSize="15dp" />


        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="Amount"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="12dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/l2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/l1"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/date"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:text="@string/date"
            android:textAlignment="center"
            android:textColor="#e83d3d"
            android:textSize="15dp" />


        <TextView
            android:id="@+id/txtPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="Date"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="(শেষ দিন)"
            android:textAlignment="center"
            android:textColor="#e83d3d"
            android:textSize="10dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/l3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/l2"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/place"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:text="@string/location"
            android:textAlignment="center"
            android:textColor="#e83d3d"
            android:textSize="15dp" />


        <TextView
            android:id="@+id/txtAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="Place"
            android:textAlignment="center"
            android:textColor="#404040"
            android:textSize="12dp" />

    </LinearLayout>
</RelativeLayout>